# momo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
docs/dev-diary/: v0.1.0.md  v0.2.0.md  v0.3.0.md
src/momo/: agent.py  cli.py  config.py  constants.py  cz.py  diary.py  enums.py  prompt.py  utils.py
src/momo/prompts/: archetype.j2  behavior.j2  big5.j2  identity.j2  instructions.j2  quirks.j2  quirks.yaml  style.j2  system_prompt.j2
src/momo/prompts/instructions/: chat.j2  diary_body.j2  diary_title.j2
