[project]
name = "momo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"] # E: check PEP 8 style rules, F: check unused code, I: sort imports
ignore = ["E501"] # avoid noisy lint warnings
