[project]
name = "momo"
version = "0.3.0"
description = "Momo (もも) - a personalized agentic digital being with a simulated life"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.30.1",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "dotenv>=0.9.9",
    "pre-commit>=4.3.0",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"] # E: check PEP 8 style rules, F: check unused code, I: sort imports
ignore = ["E501"] # avoid noisy lint warnings

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_momo"
version = "0.3.0"
tag_format = "v$version"
major_version_zero = true
version_files = [
    "pyproject.toml:^version",
]
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
changelog_file = "CHANGELOG.md"

[project.entry-points."commitizen.plugin"]
cz_momo = "momo.cz:CustomMomoCz"

[project.scripts]
momo = "momo.cli:app"
